--- a/.github/workflows/scraper_schedule.yml
+++ b/.github/workflows/scraper_schedule.yml
@@ -1,15 +1,32 @@
-name: Scheduled Scraper Workflow 
+name: Daily 9 AM Job
+
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '0 9 * * *'
+    - cron: '0 9 * * *'  # Runs at 9:00 AM UTC daily
+
 jobs:
-  build:
+  daily-task:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Run Python Scraper script
+        
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'  # Specify your Python version
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install "pymongo[srv]"
+          pip install --upgrade "pymongo[srv]"
+          pip install selenium
+          pip install beautifulsoup4
+          pip install requests
+          pip install pandas
+          pip install numpy
+          # smtplib is part of Python's standard library and doesn't need installation
+
+      - name: Run Python script
         run: python log_cabin_scraper.py
