--- a/.github/workflows/scraper_schedule.yml
+++ b/.github/workflows/scraper_schedule.yml
@@ -23,6 +23,7 @@ jobs:
           pip install --upgrade "pymongo[srv]"
           pip install selenium
           pip install beautifulsoup4
+          pip install bs4
           pip install requests
           pip install pandas
           pip install numpy
