--- a/.github/workflows/scraper_schedule.yml
+++ b/.github/workflows/scraper_schedule.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install "pymongo[srv]"
-          pip install --upgrade "pymongo[srv]"
+          pip install --upgrade "pymongo[srv]" #
           pip install selenium
           pip install beautifulsoup4
           pip install bs4
