--- a/.github/workflows/scraper_schedule.yml
+++ b/.github/workflows/scraper_schedule.yml
@@ -3,6 +3,7 @@ name: Daily 9 AM Job
 on:
   schedule:
     - cron: '0 9 * * *'  # Runs at 9:00 AM UTC daily
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   daily-task:
@@ -20,13 +21,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install "pymongo[srv]"
-          pip install --upgrade "pymongo[srv]" #
+          pip install --upgrade "pymongo[srv]"
           pip install selenium
           pip install beautifulsoup4
-          pip install bs4
           pip install requests
           pip install pandas
           pip install numpy
+          # smtplib is part of Python's standard library and doesn't need installation
 
       - name: Run Python script
         run: python log_cabin_scraper.py
